--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Puzzel - Halloween Vrijwilligers</title>
+    <title>Halloween Vrijwilligers</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -747,8 +747,9 @@
         <header class="header">
             <img src="depuzzel_logo_groen.png" alt="De Puzzel Logo" class="header-logo">
             <div class="header-content">
-                <h1>Halloween 2024 - De Puzzel</h1>
-                <p>Vrijdag 18 oktober • 17:00-21:00 uur • Samen maken we er een onvergetelijk feest van!</p>
+                <h1>Halloween 2025 - De Puzzel</h1>
+                <p>Vrijdag 18 oktober • 17:00-21:00 uur</p>
+                <p>Samen maken we er een onvergetelijk feest van!</p>
             </div>
         </header>
 
