--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
         <header class="header">
             <img src="depuzzel_logo_groen.png" alt="De Puzzel Logo" class="header-logo">
             <div class="header-content">
-                <h1>Halloween 2025 - De Puzzel</h1>
+                <h1>Halloween 2025</h1>
                 <p>Vrijdag 18 oktober • 17:00-21:00 uur</p>
                 <p>Samen maken we er een onvergetelijk feest van!</p>
             </div>
