--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                         <p>Help mee om De Puzzel nog beter te maken voor alle leerlingen.</p>
                     </div>
                     <div class="priority-function">
-                        <h4>🥂 Gratis drankkaart</h4>
+                        <h4>🥂 Gratis drankjetons</h4>
                         <p>Geniet van gratis drankjes tijdens het evenement.</p>
                     </div>
                     <div class="priority-function">
